infra/vpc.tf
resource "aws_vpc" "ansible_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "ansible"
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.ansible_vpc.id
}
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.ansible_vpc.id
}

resource "aws_route" "internet_ansible" {
  route_table_id         = aws_route_table.public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "assoc_ansible" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.ansible_vpc.id
  cidr_block              = "10.10.1.0/24"
  availability_zone = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "ansible-public-subnet"
  }
}
